point gravity update

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <ul id="all-topics">
     <p>Topics</p>
     <li><a onClick="loadJS('point_gravity.js');">Point Gravity</a></li>
-    <li><a id="line-gravity">Line Gravity</a></li>
-	<li><a id="coulomb-attraction">Coulomb Attraction</a></li>
-    <li><a id="elastic-collision">Elastic Collision</a></li>
-    <li><a id="pendulum">Pendulum</a></li>
+    <li><a onClick="loadJS('point_gravity.js');">Line Gravity</a></li>
+	  <li><a onClick="loadJS('point_gravity.js');">Coulomb Attraction</a></li>
+    <li><a onClick="loadJS('point_gravity.js');">Elastic Collision</a></li>
+    <li><a onClick="loadJS('point_gravity.js');">Pendulum</a></li>
    </ul>
 </div>
 
