major host upgrade

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="style.css"/>
 <script type="text/javascript" src="vector.js"></script>
 <script type="text/javascript" src="particle.js"></script>
+<script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="loader.js" ></script>
 </head>
     <body>
@@ -14,7 +15,6 @@
 </div>
 <div class="github-about">
   <a>Github</a>
-  <a>About</a>
 </div>
 </div>
 </header>
@@ -24,18 +24,18 @@
   <ul id="all-topics">
     <p>Topics</p>
     <li><a onClick="loadJS('point_gravity.js');">Point Gravity</a></li>
-    <li><a onClick="loadJS('point_gravity.js');">Line Gravity</a></li>
-	  <li><a onClick="loadJS('point_gravity.js');">Coulomb Attraction</a></li>
-    <li><a onClick="loadJS('point_gravity.js');">Elastic Collision</a></li>
-    <li><a onClick="loadJS('point_gravity.js');">Pendulum</a></li>
+    <li><a onClick="loadJS('surface_gravity.js');">Surface Gravity</a></li>
+	  <li><a onClick="loadJS('newtons_cradle.js');">Newton's Cradle</a></li>
+    <li><a onClick="loadJS('elastic_collision.js');">Elastic Collision</a></li>
+    <li><a onClick="loadJS('electron_motion.js');">Electron Motion in a Magnetic field</a></li>
+   
    </ul>
 </div>
 
 <div class="main">
 
     <canvas id="myCanvas" width="900" height = "570">
-        </canvas>
-
+    </canvas>
 </div>
 
 <div class="right">
@@ -45,7 +45,14 @@
 </div>
 
 <footer>
-
+ <div class="center">
+  <b>Author</b>: Kiran Channayanamath
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <b>Email</b>: <u>ckiran2508@gmail.com</u>
+ </div>
 </footer>
 </div>
     
