--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div id="root"><header>
   <div class="nav-container">
 <div class="logo-container">
-  2D Motion Demonstrations
+  2D Motion Illustrator
 </div>
 <div class="github-about">
   <a>Github</a>
