--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   2D Motion Illustrator
 </div>
 <div class="github-about">
-  <a>Github</a>
+  <a href="https://github.com/ckiran2508/2d_motion_illustrator">Github</a>
 </div>
 </div>
 </header>
