--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="loader.js" ></script>
 </head>
-    <body>
+    <body onload="loadJS('point_gravity.js');">
        <div id="root"><header>
   <div class="nav-container">
 <div class="logo-container">
