--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <li><a onClick="loadJS('newtons_cradle.js');">Newton's Cradle</a></li>
     <li><a onClick="loadJS('elastic_collision.js');">Elastic Collision</a></li>
     <li><a onClick="loadJS('electron_motion.js');">Electron Motion in a Magnetic field</a></li>
-   
+    <li><a onClick="loadJS('guassian_blur.js');">Guassian Blur</a></li>
    </ul>
 </div>
 
